--- a/test1/WebContent/WEB-INF/web.xml
+++ b/test1/WebContent/WEB-INF/web.xml
@@ -10,6 +10,16 @@
         <servlet-name>HelloWorld</servlet-name>
         <url-pattern>/HelloWorld</url-pattern>
     </servlet-mapping>
+       <servlet>
+        <servlet-name>Practice</servlet-name>
+        <servlet-class>test.Practice</servlet-class>
+    </servlet>
+ 
+    <servlet-mapping>
+        <servlet-name>Practice</servlet-name>
+        <url-pattern>/Practice</url-pattern>
+    </servlet-mapping>
+    
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
